--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -4,16 +4,16 @@
         <div class="panel panel-default">
             <div class="panel-heading">Login</div>
             <div class="panel-body">
-                <form>
+                <form >
                     <div class="form-group">
                         <label>Email Address</label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" ng-model="auth.login.user.email">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" ng-model="auth.login.user.pwd">
                     </div>
-                    <buttton type="submit" class="btn btn-default">Submit</buttton>
+                    <buttton type="submit" class="btn btn-default" ng-click="auth.login()">Submit</buttton>
                 </form>
             </div>
         </div>
@@ -22,21 +22,21 @@
         <div class="panel panel-default">
             <div class="panel-heading">Register</div>
             <div class="panel-body">
-                <form name="register" ng-submit="auth.register()">
+                <form name="register">
                     <div class="form-group">
                         <label>Email Address</label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" ng-model="auth.user.email">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" name="pwd" class="form-control" ng-model="pwd">
+                        <input type="password" name="pwd" class="form-control" ng-model="auth.user.pwd">
                     </div>
                     <div class="form-group">
                         <label>Password Confirm</label>
-                        <input type="password" name="pwdConfirm" class="form-control" compare-to="pwd" ng-model="pwdConfirm">
+                        <input type="password" name="pwdConfirm" class="form-control" compare-to="auth.user.pwd" ng-model="pwdConfirm">
                     </div>
                     <span ng-show="register.pwdConfirm.$dirty && register.pwdConfirm.$invalid">Passwords do not match</span>
-                    <buttton type="submit" class="btn btn-default">Submit</buttton>
+                    <buttton type="submit" class="btn btn-default" ng-click="auth.register()" ng-disabled="register.pwdConfirm.$invalid">Submit</buttton>
                 </form>
             </div>
         </div>
